   - new simulator crash: "This application is modifying the autolayout engine from a background thread, which can lead to engine corruption and weird crashes. This will cause an exception in a future release."
   -- got in rvc viewWillAppear first, then later in configTlist viewWillAppear -- added dispatch_async(dispatch_get_main_queue(), ^(void){ <code> }); around all viewWillAppear doing anything with interface
   --- hmmm, got hit more, all uikit calls (at least which modify UI) must be on main thread ... searching...

21 sep 2015
   - added pspdf library suggested by StackOverflow response, crash on any UIKit call outside main thread
   - fixed issue above
   - finding many more ui modified not on main thread, yayyy
   
--- commit ---

    - add alert for saving for iTunes, say is done and reference possible actions with files.
    - various thread interaction issues from changes to put ui work all on main thread; added lock for csv loading
    - begin freeze for next release

--- commit ---

    - create testtzuser@realidata.com / Test1User in TZ store

22 sep 2015
   - successful in-app activation on iphone tunneling to uk; various problems getting on to app store
   - implemented rtPurchasedNotification, thank-you alert and immediately update UI to reflect purchased 

23 sep 2015
   - more improvements to demo tracker,  DEMOS_VERSION still at 2
   - make load demos wipe existing tracker with same tid and name
   - releasing as 2.0.6 - rTracker build 5789  rTrackerA build 557

--- commit ---

   


todo: remove rTracker_Prefix.pch ?  seems to be from ios3
remove rTrackerTests-Prefix.pch ?


+++ check rvc viewDidAppear / restart behaviour with adversion changes

+ work through fonts, probably use PrefBodyFont more
+ check mail func as changing present view controller calls (ios6)

+ add -[n] entries thing
+ add entry_count as a fn piece -- count of entries over range, so avg could be sum()/entry_count



